objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Relationship_Risk_Category__c</fullName>
        <label>Primary Relationship Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>Already Progressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change-Resistant Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competing Priorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Disengagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack Long-Term Buy-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Expectation Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Paralysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Release Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superclaims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Distrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriptive Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Upsell_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Upsell Source</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.Probability</formula>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Value__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.Proposal_Value_Read__c</formula>
        <label>Proposal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Status_Code__c</fullName>
        <formula>IF( BEGINS(Membership_Status__c , &quot;Member&quot;), 0, If(Most_Recent_Lost_Opportunity_Close_Date__c &gt; Today()-180, 1, if( Opportunity_in_Outreach__c = &quot;Yes&quot;,2, if(Opportunity_in_Prospect__c = &quot;Yes&quot;, 3, if( (Most_Recent_NBB_Visit__c &gt;(TODAY()-180) &amp;&amp; NOT(ISBLANK(Most_Recent_NBB_Visit__c ))),3,4)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Member = 0, Recent No = 1, In Outreach = 2, Active Opp or Recent Visit = 3, Avail for Outreach = 4</inlineHelpText>
        <label>Prospect Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF( BEGINS(Membership_Status_Text__c , &quot;Member&quot;), &quot;Member&quot;, If(Most_Recent_Lost_Opportunity_Close_Date__c &gt; Today()-180, &quot;Recent No&quot;, if( Opportunity_in_Outreach__c = &quot;Yes&quot;, &quot;In Outreach&quot;, if(Opportunity_in_Prospect__c = &quot;Yes&quot;, &quot;Active Opp&quot;, if( (Most_Recent_NBB_Visit__c &gt;(TODAY()-180) &amp;&amp; NOT(ISBLANK(Most_Recent_NBB_Visit__c ))),&quot;Recent Visit&quot;,&quot;Available For Outreach&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Member = Member, Recent No = close/lost opportunity in past 180 days, Opportunity in outreach = active opportunity in outreach or prospect stage, Opportunity in prospect = active opportunity in initial visit scheduled or fast track, recent visit past 180</inlineHelpText>
        <label>Prospect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Framework_Actual__c</fullName>
        <label>ROI Framework (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Framework_Projected__c</fullName>
        <label>ROI Framework (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Review_Actual__c</fullName>
        <label>ROI Review (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Review_Target__c</fullName>
        <label>ROI Review (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Realized_ROI__c</fullName>
        <label>Realized ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_QA_Call__c</fullName>
        <label>Reason for No QA Call</label>
        <picklist>
            <picklistValues>
                <fullName>Too Early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recent Executive Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Ambassador_Comments__c</fullName>
        <label>Reference/Ambassador Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Comments__c</fullName>
        <inlineHelpText>Reference Characteristics</inlineHelpText>
        <label>Reference Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Ready__c</fullName>
        <label>Reference Ready</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation and Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Status__c</fullName>
        <inlineHelpText>Indicate whether Institution serves as Referece for Product or has Ambassador Contact present.</inlineHelpText>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Active Initiatives - Employ Phys Leakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Initiatives - Expand PSA/New Mkts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Initiatives - Grow Key Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Initiatives - Pract. Acquisistion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculated ANR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation of Outreach - Mkt Adv CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation of Outreach - No doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation of Outreach - Other CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - Rapid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation - Smooth/Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market - 1 hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market - 2 hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market - Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach - Liaison team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach - No liaison team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Over Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size - Multi/Regional Health System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size - Small/Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size - Small Multi/Hospital System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size - Stand alone/Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Inst- Underpayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Pro- Underpayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Inst- Denials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Pro- Denials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Inst- Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Pro- Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC: Revenue Recovery Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regular_Call_Schedule__c</fullName>
        <label>Regular Call Schedule</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Grade_Notes__c</fullName>
        <label>Relationship Grade Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Grade__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Relationship Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Trending__c</fullName>
        <label>Relationship Trending</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remove_from_Progs_Available_for_Outreach__c</fullName>
        <formula>IF(
AND(
Prospect_Status__c &lt;&gt; &quot;Available For Outreach&quot;,
OR(
CONTAINS(Account_Name__r.BI_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c),
CONTAINS(Account_Name__r.Core_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c),
CONTAINS(Account_Name__r.Academy_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c)
)
)
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove from Progs Available for Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Owner__c</fullName>
        <formula>IF(
	OR(
		Membership_Status__c = &quot;Prospect - Pending Future Start Date&quot;,
		BEGINS(Membership_Status__c,&quot;Member&quot;)
	), 
	Latest_Contract__r.Renewal_Opp_Owner_2__c, 
	Active_Contract_Idenfied__r.Renewal_Opp_Owner_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Membership Status contains &quot;Member&quot; or &quot;Prospect-Future Start Date&quot; then this field shows the Renewal Opp Owner 2 from the Latest Contract.  Otherwise this field shows the Renewal Opp Owner 2 from the Active Contract Identified.</inlineHelpText>
        <label>Renewal Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Main_Contact__c</fullName>
        <description>Created for CR-20160223-9622.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Active_Renewal_Opportunity__r.Main_Contact__c, Active_Renewal_Opportunity__r.Main_Contact__r.FirstName + &apos; &apos; + Active_Renewal_Opportunity__r.Main_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Main Contact associated with Active Renewal Opportunity.</inlineHelpText>
        <label>Renewal Opportunity Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Unit_Count__c</fullName>
        <formula>Program__r.Renewal_Unit_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Unit Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Relationship_Risk_Category__c</fullName>
        <label>Secondary Relationship Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>Already Progressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change-Resistant Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competing Priorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Disengagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack Long-Term Buy-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Expectation Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Paralysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Release Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superclaims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Distrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriptive Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series_1_Initiatives_Activated_Actual__c</fullName>
        <label>Series 1 Initiatives Activated (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series_1_Initiatives_Activated_Target__c</fullName>
        <label>Series 1 Initiatives Activated (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series_1_Initiatives_Created_Actual__c</fullName>
        <label>Series 1 Initiatives Created (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series_1_Initiatives_Created_Target__c</fullName>
        <label>Series 1 Initiatives Created (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Plan_Delivery_Actual__c</fullName>
        <label>Service Plan Delivery (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Plan_Delivery_Projected__c</fullName>
        <label>Service Plan Delivery (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Live__c</fullName>
        <inlineHelpText>Date Member signed off on implemented site.</inlineHelpText>
        <label>Site Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>Text( Active_Contract_Idenfied__r.Source_Opportunity__r.StageName )</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_on_First_Contract__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Earliest_Contract__r.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.Start__c</formula>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Segment__c</fullName>
        <formula>TEXT( Account_Name__r.Strategic_Account_Segment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Account Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transitioned_to_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this member transitioned to support?</description>
        <label>Transitioned to Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tricare_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this member have Tricare Maintenance with PIC?</description>
        <label>Tricare Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field indicates the production URL for the member site.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Users_Last_Month__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Users Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_AdvcomPgView_AvgMo_Inst__c</fullName>
        <label>zAdvisory.com Avg Month PgView from Inst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_AdvcomPgView_AvgMo_POC__c</fullName>
        <label>zzAdvisory.com Avg Month PgView from POC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_AdvcomUsers_Payer__c</fullName>
        <label>zzzAdvisory.com Users from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_DAG_AvgMo__c</fullName>
        <label>zzAvg Month DAG Tool Payer Utililization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_ExpertCenter_CXO__c</fullName>
        <label>zzzExpert Center CXO Requests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Main_POC_Last_Advcom_Login__c</fullName>
        <label>zzzMain POC Last Advisory.com Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Util_MtgRoundtable_CEO__c</fullName>
        <label>zzzCEO Roundtable Attendance from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Mtg_POC__c</fullName>
        <label>zzzMeeting Attendance by POC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Mtg_Payer__c</fullName>
        <label>zzzMeeting Attendance from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Number_of_Red_Flags__c</fullName>
        <label>zzzRed Flags</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_OI_Custom__c</fullName>
        <label>zzzOI / Custom Reports</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Onsite_Payer__c</fullName>
        <label>zzzOnsites from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_PubReorders__c</fullName>
        <label>zzzPublication Reorders</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Teleconf_All__c</fullName>
        <label>zzzTeleconference Attendees (All)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Util_Teleconf_Payer__c</fullName>
        <label>zzzTeleconference Payer Attendees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Team_Comments__c</fullName>
        <label>Value Team Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Team__c</fullName>
        <label>Value Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>Advisory_Board_Reference_Institutions</fullName>
        <columns>Program_Acronym__c</columns>
        <columns>NAME</columns>
        <columns>Membership_Status__c</columns>
        <columns>Reference_Status__c</columns>
        <columns>Reference_Comments__c</columns>
        <columns>Payer_Status__c</columns>
        <columns>Start_Date_on_First_Contract__c</columns>
        <columns>End_Date_on_Last_Contract__c</columns>
        <columns>Earliest_Contract__c</columns>
        <columns>Renewal_Opp_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payer_Status__c</field>
            <operation>contains</operation>
            <value>Payer,Integrated,Member</value>
        </filters>
        <filters>
            <field>Reference_Status__c</field>
            <operation>equals</operation>
            <value>Reference</value>
        </filters>
        <label>Advisory Board Reference Institutions</label>
        <sharedTo>
            <roleAndSubordinates>PT_AM_Dept_Lead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Andrea_Taylor_Recruitment_HICF_CEO</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Meeting_Series_Primary__c</columns>
        <columns>Meeting_Status_Primary__c</columns>
        <columns>Meeting_Registration_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Acronym__c</field>
            <operation>equals</operation>
            <value>HICF</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Politzer</value>
        </filters>
        <filters>
            <field>Membership_Status__c</field>
            <operation>contains</operation>
            <value>Member - Payer</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Membership__c.Record_Type_1</value>
        </filters>
        <label>Andrea Taylor Recruitment - HICF CEO</label>
        <sharedTo>
            <role>AMA</role>
            <role>CoreAccountManagementLead</role>
            <role>GA3RM2</role>
            <role>GA4RM1</role>
            <role>GA4RM4</role>
            <role>GA4RM5</role>
            <role>GADirector4</role>
            <role>HCICITTICOS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Andrea_Taylor_Recruitment_PPR_CEO</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Meeting_Series_Primary__c</columns>
        <columns>Meeting_Status_Primary__c</columns>
        <columns>Meeting_Registration_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Registration_Comments__c</field>
            <operation>contains</operation>
            <value>#PPRCEO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Membership__c.Record_Type_1</value>
        </filters>
        <label>Andrea Taylor Recruitment - PPR CEO</label>
        <sharedTo>
            <role>AMA</role>
            <role>CoreAccountManagementLead</role>
            <role>GA4RM1</role>
            <role>GA4RM4</role>
            <role>GA4RM5</role>
            <role>GADirector4</role>
            <role>HCICITTICOS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Andrea_Taylor_Recruitment_WCHPE</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Meeting_Status_Primary__c</columns>
        <columns>Meeting_Registration_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Acronym__c</field>
            <operation>equals</operation>
            <value>WCHPE</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Levine</value>
        </filters>
        <filters>
            <field>Membership_Status__c</field>
            <operation>contains</operation>
            <value>Member -</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notContain</operation>
            <value>Espirito Santo Saude</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Membership__c.Record_Type_1</value>
        </filters>
        <label>Andrea Taylor Recruitment - WCHPE</label>
        <sharedTo>
            <role>AMA</role>
            <role>CoreAccountManagementLead</role>
            <role>GA4RM1</role>
            <role>GA4RM4</role>
            <role>GA4RM5</role>
            <role>GADirector4</role>
            <role>HCICITTICOS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIPC_Crimson_Continuum_of_Care_Mem</fullName>
        <columns>NAME</columns>
        <columns>Program_Acronym__c</columns>
        <columns>Membership_Status__c</columns>
        <columns>Payer_Status__c</columns>
        <columns>Start_Date_on_First_Contract__c</columns>
        <columns>Renewal_Opp_Owner__c</columns>
        <columns>Active_Contract_Annual_Contract_Value__c</columns>
        <columns>Active_Contract_Negotiated_Amount__c</columns>
        <columns>Active_Contract_Renewal_Opportunity_Stat__c</columns>
        <columns>Current_Year_Annual_Contribution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Acronym__c</field>
            <operation>equals</operation>
            <value>BIPC</value>
        </filters>
        <filters>
            <field>Membership_Status__c</field>
            <operation>contains</operation>
            <value>Member - Payer</value>
        </filters>
        <label>BIPC - Crimson Continuum of Care Mem.</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>